// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;

exports[`should correctly render ExpensSummary with 1 expense 2`] = `
<div>
  <h1>
    Viewing 
    32
     
    expenses
     totalling 
    $23,532,141.34
  </h1>
</div>
`;
